arreglos video upload
* modificado contenedor de archivos
* retoques visuales
* corregida accion de boton de seleccionar video


Former-commit-id: 70a10ef815981628c75f69b167818c2de6b7f08f [formerly 59f13819706be22f3ca4cfa7a54fd8dfe2ad165f]
Former-commit-id: 22d41eda566f7b97bef31e988eda8bd5f6dfbeca

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -324,7 +324,7 @@ display:block;
 width:1024px;
 margin:auto;
 }
-.ui-dialog button,.ui-dialog span.btn-success.fileinput-button,.ui-dialog input[type="submit"],.ui-dialog input[type="reset"],.ui-dialog input[type="button"],
+.ui-dialog button,.btn,span.btn-success.fileinput-button,.ui-dialog input[type="submit"],.ui-dialog input[type="reset"],.ui-dialog input[type="button"],
 page wrapper button,page wrapper input[type="submit"],page wrapper input[type="reset"],page wrapper input[type="button"],.button{
     border:none;
     color:white;
