--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -2093,19 +2093,23 @@ container .mid-pannel menu#carousel{
 	display: block;
 }
 #preVideTags .tag-container .select-capture{
-	width: 280px;
+	width: 270px;
 	height: 70px;
-	padding: 10px;
+	padding: 10px 0;
 	text-align: center;
+	float: left;
+	margin: 0 8px;
 }
 #preVideTags .tag-container .select-capture .option-cap{
-	width:60px;
-	height:60px;
+	width:80px;
+	height:37px;
 	/*background-repeat: no-repeat;*/
 	background-size: 100%;
-	float: left;
 	margin: 0 5px;
 	cursor: pointer;
+	background-repeat: no-repeat;
+	background-position: center;
+	display: inline-block;
 }
 #divcboPeoples .facebook-auto,
 #divcboPeoples .facebook-auto #cboPeoples_feed,
