agregado borde a la miniatura de video seleccionada
Former-commit-id: 3b4dd61268eda18bcb057a583dbd6527a8ef161d [formerly 11feceebfbce4eb9f95604a7d08a9d54c4558257]
Former-commit-id: 61a27e79fc716633c78d26f9500ba0dd2df7afec

--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -2103,13 +2103,15 @@ container .mid-pannel menu#carousel{
 #preVideTags .tag-container .select-capture .option-cap{
 	width:80px;
 	height:37px;
-	/*background-repeat: no-repeat;*/
 	background-size: 100%;
-	margin: 0 5px;
+	margin: 0 2px;
 	cursor: pointer;
-	background-repeat: no-repeat;
 	background-position: center;
 	display: inline-block;
+	border: 2px solid white;
+}
+#preVideTags .tag-container .select-capture .option-cap.selected{
+	border:2px solid blue;
 }
 #divcboPeoples .facebook-auto,
 #divcboPeoples .facebook-auto #cboPeoples_feed,
