--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -535,6 +535,8 @@
 #productVideo #youtube		{ background-image:url('smt/tag/btn_youtube.png'); }
 .tag-buttons #vimeo,
 #productVideo #vimeo		{ background-image:url('smt/tag/btn_vimeo.png'); }
+.tag-buttons #local,
+#productVideo #local		{ background-image:url('smt/tag/Video.png'); }
 .tag-buttons #sponsor		{ background-image:url('smt/tag/btn_sponsor.png'); }
 .tag-buttons #report		{ background-image:url('smt/tag/btn_report.png'); }
 .tag-buttons #share			{ background-image:url('smt/tag/btn_share.png'); }
@@ -546,7 +548,7 @@
 .tag-buttons #dislike,.tag-buttons #like,
 .tag-buttons #comment,.tag-buttons #delete,
 .tag-buttons #share,.tag-buttons #report,
-.tag-buttons #sponsor,.tag-buttons #vimeo,
+.tag-buttons #sponsor,.tag-buttons #vimeo,.tag-buttons #local,
 .tag-buttons #youtube,.tag-buttons #redist,.tag-buttons #qrcode,
 #productVideo #vimeo,#productVideo #youtube{
 	border-radius: 5px !important;
