--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -329,22 +329,23 @@
 .tag-container,.tag-container [tag],.tag-container [tag] img.bg,
 .tag-container [tag] div.bg,.tag-container [tag] .tagLink,
 .tag-container [tag] .minitag,.tag-container [tag] .tag,
-.tag-container [tag] menu{
+.tag-container [tag] menu, 
+#singleVideoDialog [tag] div.video{
 	width:20.3125em;/*650px;*/
 }
 .tag-container.clean [tag],
 .tag-container .tagLink,.tag-container [tag] img.bg,.tag-container [tag] div.bg,
-.tag-container [tag] .minitag,.tag-container [tag] .tag,#singleVideoDialog [tag] div.video{
+.tag-container [tag] .minitag,.tag-container [tag] .tag, #singleVideoDialog [tag] div.video{
 	height:9.375em; /*300px;*/
 }
-.tag-container,.tag-container [tag],.tag-container [tag] img.bg,.tag-container [tag] div.bg,#singleVideoDialog [tag] div.video{
+.tag-container,.tag-container [tag],.tag-container [tag] img.bg,.tag-container [tag] div.bg, #singleVideoDialog [tag] div.video{
 	position:relative;
 }
-.tag-container [tag] .minitag,.tag-container [tag] .tag,.tag-container [tag] .tagLink,#singleVideoDialog [tag] div.video{
+.tag-container [tag] .minitag,.tag-container [tag] .tag,.tag-container [tag] .tagLink, #singleVideoDialog [tag] div.video{
 	position:absolute;
 	top:0;
 }
-.tag-container [tag] .minitag,.tag-container [tag] #singleVideoDialog [tag] div.video{
+.tag-container [tag] .minitag,.tag-container [tag], #singleVideoDialog [tag] div.video{
 	-webkit-border-radius:0.875em; /*28px;*/
 	-moz-border-radius:0.875em; /*28px;*/
 	border-radius:0.875em; /*28px;*/
@@ -352,7 +353,7 @@
 	-o-background-size:100% auto;
 	background-size:100% auto;
 }
-.tag-container [tag].bg,.tag-container [tag] img.bg,.tag-container [tag] div.bg,#singleVideoDialog [tag] div.video{
+.tag-container [tag].bg,.tag-container [tag] img.bg,.tag-container [tag] div.bg, #singleVideoDialog [tag] div.video{
 	border-radius:0.875em; /*28px;*/
 	-moz-border-radius:0.875em; /*28px;*/
 	-webkit-border-radius:0.875em; /*28px;*/
