--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -432,11 +432,15 @@
 .tag-container [tag] .extras .vimeo{ background-image:url(smt/vimeo.png); }
 .tag-container [tag] .extras .local{ background-image:url(smt/Video.png); }
 .tag-container [tag] div.video{
-	position: relative;
-	z-index: 1;
-	float: left;
 	overflow: hidden;
 	background-color: black;
+}
+.tag-container [tag] div.video video{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
 }
 .tag-comments-window{
 	font-size:11px;
