--- a/css/seemytag.css
+++ b/css/seemytag.css
@@ -304,25 +304,26 @@ page>header,page>header logo,page loader.page{
 	-o-transition:width 0.25s,height 0.25s,margin 0.25s;
 	transition:width 0.25s,height 0.25s,margin 0.25s;
 }
-page wrapper{
-display:block;
-width:1024px;
-min-height:10px;
-margin:auto;
-padding:15px 0;
+page>wrapper{
+	display:block;
+	min-height:10px;
+	margin:auto;
+	padding:15px 0;
 }
-page container{
-display:block;
-position:relative;
-left:0;
-right:0;
-margin:0;
-z-index:5;
+page>wrapper,page>header>content{
+	width:1024px;
+}
+page>wrapper>container,page>container{
+	display:block;
+	position:relative;
+	left:0;
+	right:0;
+	margin:0;
+	z-index:5;
 }
 page content{
-display:block;
-width:1024px;
-margin:auto;
+	display:block;
+	margin:auto;
 }
 .ui-dialog button,.btn,span.btn-success.fileinput-button,.ui-dialog input[type="submit"],.ui-dialog input[type="reset"],.ui-dialog input[type="button"],
 page wrapper button,page wrapper input[type="submit"],page wrapper input[type="reset"],page wrapper input[type="button"],.button{
