--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1456,3 +1456,150 @@ loader.s32,.loader.s32{
 input.password-field {
      -webkit-text-security: disc;
 }
+
+/*TAGLIST*/
+.tag-container [tag] menu{
+	position:relative;
+	display:block;
+	margin:0.2em 0;
+	padding:0;
+}
+.tag-container [tag] menu ul{
+	float:right;
+	margin:0;
+	padding:0;
+	cursor:pointer;
+}
+.tag-container [tag] menu li{
+	display:inline-block;
+	background-position:50% 50%;
+	background-repeat:no-repeat;
+	border:#eee 1px solid;
+	background-size:0.633em;
+	padding:0.507em 0.507em;
+	margin:0 12px;
+/*	-webkit-border-radius:0.1585em;
+	-moz-border-radius:0.1585em;
+	border-radius:0.1585em;*/
+}
+.tag-container [tag] menu li span{
+	position:relative;
+	display:inline-block;
+	overflow:hidden;
+	text-overflow:clip;
+	white-space:nowrap;
+	left:0.833em;
+}
+.tag-container [tag] menu div#hashTashMenu{
+	float:left;	
+	padding:5px 5px;
+	width:335px;
+	cursor:default;
+	text-overflow:ellipsis;
+	overflow:hidden;
+	font-size:11px;
+	color:#f82;
+	-webkit-border-radius:0.3085em;
+	-moz-border-radius:0.3085em;
+	border-radius:0.3085em;
+	border:#eee 1px solid;
+	background:#fff;
+}
+.tag-container [tag] menu div#hashTashMenu span{
+	cursor:default;
+	word-wrap:break-word;
+	white-space:nowrap;
+}
+
+.tag-container [tag] menu div#hashTashMenu:hover span{
+	white-space:normal;
+	background:#fff;
+
+}
+
+.tag-container [tag] menu div#hashTashMenu span a{
+	text-decoration:none;
+	color:#f82;
+	background:none
+}
+.tag-container [tag] menu div#hashTashMenu span a:hover{
+	text-decoration:underline;
+}
+.tag-container [tag] menu li span{ display:none; }
+.tag-container [tag] menu li:hover,
+.mobile .tag-container [tag] menu li.expand{
+	background-color:#f6f6f6;
+}
+.tag-container [tag] menu li:hover span{
+/*	width:150px;*/
+}
+.tag-container [tag] menu li#bcard{
+	background-image:url('../img/tag/menu/bcard.png');
+}
+.tag-container [tag] menu li#bcard:hover,
+.mobile .tag-container [tag] menu li.expand#bcard{
+	background-image:url('../img/tag/menu/bcard_over.png');
+}
+.tag-container [tag] menu li#like{
+	background-image:url('../img/tag/menu/like.png?1');
+}
+.tag-container [tag] menu li#like:hover,
+.mobile .tag-container [tag] menu li.expand#like{
+	background-image:url('../img/tag/menu/like_over.png?1');
+}
+.tag-container [tag] menu li#dislike{
+	background-image:url('../img/tag/menu/dislike.png?1');
+}
+.tag-container [tag] menu li#dislike:hover,
+.mobile .tag-container [tag] menu li.expand#dislike{
+	background-image:url('../img/tag/menu/dislike_over.png?1');
+}
+.tag-container [tag] menu li#comment{
+	background-image:url('../img/tag/menu/comment.png?1');
+}
+.tag-container [tag] menu li#comment:hover,
+.mobile .tag-container [tag] menu li.expand#comment{
+	background-image:url('../img/tag/menu/comment_over.png?1');
+}
+.tag-container [tag] menu li#share{
+	background-image:url('../img/tag/menu/share.png?1');
+}
+.tag-container [tag] menu li#share:hover,
+.mobile .tag-container [tag] menu li.expand#share{
+	background-image:url('../img/tag/menu/share_over.png?1');
+}
+.tag-container [tag] menu li#redistr{
+	background-image:url('../img/tag/menu/redist.png?1');
+}
+.tag-container [tag] menu li#redistr:hover,
+.mobile .tag-container [tag] menu li.expand#redistr{
+	background-image:url('../img/tag/menu/redist_over.png?1');
+}
+.tag-container [tag] menu li#sponsors{
+	background-image:url('../img/tag/menu/sponsor.png?1');
+}
+.tag-container [tag] menu li#sponsors:hover,
+.mobile .tag-container [tag] menu li.expand#sponsor{
+	background-image:url('../img/tag/menu/sponsor_over.png?1');
+}
+.tag-container [tag] menu li#trash{
+	background-image:url('../img/tag/menu/trash.png?1');
+}
+.tag-container [tag] menu li#trash:hover,
+.mobile .tag-container [tag] menu li.expand#trash{
+	background-image:url('../img/tag/menu/trash_over.png?1');
+}
+.tag-container [tag] menu li#edit{
+	background-image:url('../img/tag/menu/edit.png?1');
+}
+.tag-container [tag] menu li#edit:hover,
+.mobile .tag-container [tag] menu li.expand#edit{
+	background-image:url('../img/tag/menu/edit_over.png?1');
+}
+.tag-container [tag] menu li#report{
+	background-image:url('../img/tag/menu/report.png?1');
+}
+.tag-container [tag] menu li#report:hover,
+.mobile .tag-container [tag] menu li.expand#report{
+	background-image:url('../img/tag/menu/report_over.png?1');
+}
