--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1603,3 +1603,15 @@ input.password-field {
 .mobile .tag-container [tag] menu li.expand#report{
 	background-image:url('../img/tag/menu/report_over.png?1');
 }
+.tag-container [tag] menu li#youtube,.tag-container [tag] menu li#vimeo,
+.tag-container [tag] menu li#local{ background-size: 100%; }
+
+.tag-container [tag] menu li#youtube{
+	background-image:url('smt/youtube.png');
+}
+.tag-container [tag] menu li#vimeo{
+	background-image:url('smt/vimeo.png');
+}
+.tag-container [tag] menu li#local{
+	background-image:url('smt/Video.png');
+}
