users profile menu tag
Former-commit-id: c4613f56e7b0a1294f2cd40a7de58b40853cb05e [formerly ed21e2c6a7601a51544db04060ce983d2929f9c5]
Former-commit-id: 4b1a1d45107e9c6a6df7338c065388f5cb60f4e5

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1533,11 +1533,11 @@ input.password-field {
 .tag-container [tag] menu li:hover span{
 /*	width:150px;*/
 }
-.tag-container [tag] menu li#bcard{
+.tag-container [tag] menu li#users{
 	background-image:url('../img/tag/menu/bcard.png');
 }
-.tag-container [tag] menu li#bcard:hover,
-.mobile .tag-container [tag] menu li.expand#bcard{
+.tag-container [tag] menu li#users:hover,
+.mobile .tag-container [tag] menu li.expand#users{
 	background-image:url('../img/tag/menu/bcard_over.png');
 }
 .tag-container [tag] menu li#like{
