ajuste de botones en la pantalla de inicio
Former-commit-id: 5a52951fe2aba4314e2db8bcf067d7792d0272d2 [formerly 76a0cf2861ec70a1342024dfe294f92b5b42167a]
Former-commit-id: a394bc0047f8bb6534b3baf2564130bf98074e8b

--- a/app/css/jquery.mobile.custom.css
+++ b/app/css/jquery.mobile.custom.css
@@ -243,14 +243,8 @@
 }
 
 .btn-orange{
-	background: #ee6323 url('tbum/white_arrow_left.png') no-repeat;
-	-webkit-background-size: 24px 20px;
-	background-size: 24px 20px;
-	background-position: 3px 10px;
+	background-color: #ee6323;
 }
 .btn-blue{
-	background: #3db8e1 url('tbum/white_arrow_left.png') no-repeat;
-	-webkit-background-size: 24px 20px;
-	background-size: 24px 20px;
-	background-position: 3px 10px;
+	background-color:#3db8e1;
 }
