view tag on app
Former-commit-id: 7247020a34343339740f3e1bb9cdaf07414b6d76 [formerly aeaee8bb8117c6d32e5e7c5b9055f00ffeecbb7c]
Former-commit-id: d82246acd08f1686a6e8e157722c9f134050eae3

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1617,16 +1617,10 @@ input.password-field {
 }
 .tag-container [tag] menu li#youtube,.tag-container [tag] menu li#vimeo,
 .tag-container [tag] menu li#local{ background-size: 100%; }
-
-.tag-container [tag] menu li#youtube{
-	background-image:url('smt/youtube.png');
-}
-.tag-container [tag] menu li#vimeo{
-	background-image:url('smt/vimeo.png');
-}
-.tag-container [tag] menu li#local{
-	background-image:url('smt/Video.png');
-}
+.tag-container [tag] menu li#youtube{ background-image:url('smt/youtube.png'); }
+.tag-container [tag] menu li#vimeo{ background-image:url('smt/vimeo.png'); }
+.tag-container [tag] menu li#local{ background-image:url('smt/Video.png'); }
+.tag-container [tag] menu li#qrcode{ background-image:url('smt/tag/qrcode.png'); }
 
 .ui-btn-inner{
 	border-top:none;
