--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1459,7 +1459,7 @@ input.password-field {
 
 /*TAGLIST*/
 .tag-container [tag] menu{
-	position:relative;
+	/*position:relative;*/
 	display:block;
 	margin:0.2em 0;
 	padding:0;
@@ -1477,7 +1477,7 @@ input.password-field {
 	border:#eee 1px solid;
 	background-size:0.633em;
 	padding:0.507em 0.507em;
-	margin:0 12px;
+	margin:0 26px 0 0;
 /*	-webkit-border-radius:0.1585em;
 	-moz-border-radius:0.1585em;
 	border-radius:0.1585em;*/
