camiando logo seemytag por tagbum en la vista de tag
Former-commit-id: ce5cb35e2a88e7dcffe3f8bf57ad9bca15c446bb [formerly 4e3e628ed746aa78d2a1336e0536d9423e7f53d4]
Former-commit-id: b47ccae12f145e784b9a3abd397ff1a5c63a63df

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1067,10 +1067,10 @@ loader.s32,.loader.s32{
 	display:block;
 }
 .logoBackEmail{
-	background:url('smt/logo.png') no-repeat;
-	-webkit-background-size:200px 80px;
-	-o-background-size:200px 80px;
-	background-size:200px 80px;
+	background:url('tbum/logo-orange.png') no-repeat;
+	-webkit-background-size:200px 70px;
+	-o-background-size:200px 70px;
+	background-size:200px 70px;
 	width:200px;
 	margin:0 auto;
 	height:75px;
