Pequeños arrecglos css, Comnetarios en tagline(APP)
Former-commit-id: 8e22e6087c6d09c5526eb9a0e9c0f6d3407f13b1 [formerly c9ac0a77e7649abacf52e5eb6077a17d8587b97c]
Former-commit-id: f20c6cac96f8fa8905fb453448453024b9fe68c3

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1463,13 +1463,13 @@ input.password-field {
 	border: 1px solid #EEE;
 	border-top: none;
 	border-radius: 0 0 10px 10px;
-	width: 600px;
-	padding: 8px 0 0 0;
+	width: 92%;
+	padding: 8px 0 8px 0;
 }
 
 #comments{
 	width: 90%;
-	margin: 0 auto 10px auto;
+	margin: 0 auto;
 }
 
 #commenting{
