--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -370,10 +370,10 @@
 	-o-background-size:100% auto;
 	background-size:100% auto;
 }
-.tag-container [tag] .tag-icons div#likeIcon{ background-image:url(smt/tag/like_icon.png); }
-.tag-container [tag] .tag-icons div#dislikeIcon{ background-image:url(smt/tag/dislike_icon.png); }
-.tag-container [tag] .tag-icons div#redist{ background-image:url(smt/tag/redist_icon.png); }
-.tag-container [tag] .tag-icons div#sponsor{ background-image:url(smt/tag/sponsor_icon.png); }
+.tag-container [tag] .tag-icons div#likeIcon{ background-image:url(smt/tag/like.png); }
+.tag-container [tag] .tag-icons div#dislikeIcon{ background-image:url(smt/tag/dislike.png); }
+.tag-container [tag] .tag-icons div#redist{ background-image:url(smt/tag/redist.png); }
+.tag-container [tag] .tag-icons div#sponsor{ background-image:url(smt/tag/sponsor.png); }
 .tag-container [tag] .redist{
 	position:absolute;
 	top:0.2em;
@@ -541,21 +541,21 @@
 	-webkit-border-radius:1em;
 	border-radius:1em;
 }
-.tag-buttons #redist		{ background-image:url('smt/tag/btn_redist.png'); }
+.tag-buttons #redist		{ background-image:url('menu/redist_over.png'); }
 .tag-buttons #youtube,
 #productVideo #youtube		{ background-image:url('smt/tag/btn_youtube.png'); }
 .tag-buttons #vimeo,
 #productVideo #vimeo		{ background-image:url('smt/tag/btn_vimeo.png'); }
 .tag-buttons #local,
 #productVideo #local		{ background-image:url('smt/tag/Video.png'); }
-.tag-buttons #sponsor		{ background-image:url('smt/tag/btn_sponsor.png'); }
-.tag-buttons #report		{ background-image:url('smt/tag/btn_report.png'); }
-.tag-buttons #share			{ background-image:url('smt/tag/btn_share.png'); }
-.tag-buttons #delete		{ background-image:url('smt/tag/btn_trash.png'); }
-.tag-buttons #comment		{ background-image:url('smt/tag/btn_comment.png'); }
-.tag-buttons #like			{ background-image:url('smt/tag/btn_like.png'); }
-.tag-buttons #dislike		{ background-image:url('smt/tag/btn_dislike.png'); }
-.tag-buttons #qrcode		{ background-image:url('smt/tag/qrcode.png'); }
+.tag-buttons #sponsor		{ background-image:url('menu/sponsor_over.png'); }
+.tag-buttons #report		{ background-image:url('menu/report_over.png'); }
+.tag-buttons #share			{ background-image:url('menu/share_over.png'); }
+.tag-buttons #delete		{ background-image:url('menu/trash_over.png'); }
+.tag-buttons #comment		{ background-image:url('menu/comment_over.png'); }
+.tag-buttons #like			{ background-image:url('menu/like_over.png'); }
+.tag-buttons #dislike		{ background-image:url('menu/dislike_over.png'); }
+.tag-buttons #qrcode		{ background-image:url('menu/qrcode.png'); }
 .tag-buttons #dislike,.tag-buttons #like,
 .tag-buttons #comment,.tag-buttons #delete,
 .tag-buttons #share,.tag-buttons #report,
