--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -742,6 +742,7 @@
 	left:140px;
 	width:20px;
 	background:transparent url('smt/menuIconsSprite.png') 0 0 no-repeat;
+	background-size: 19px 58px;
 }
 #menu ul>li[goto]>.icon,#myMenu ul>li[goto]>.icon,#menu ul>li[goback]>.icon,#myMenu ul>li[goback]>.icon,#menu ul>li[goto]>arrow,#myMenu ul>li[goto]>arrow,#menu ul>li[goback]>arrow,#myMenu ul>li[goback]>arrow{
 	background-position:0 -39px;
