arreglo wishlist en app (dispositivos pequeños)
Former-commit-id: b0683a8bfb228eabacb5045e51a695e7a524bddb [formerly a96c071e18bafbebd4b1747afd85bc4706b27c13]
Former-commit-id: ecafe68e4c7ba84a1890635dc9545b431324f165

--- a/app/css/seemytag.css
+++ b/app/css/seemytag.css
@@ -1203,9 +1203,17 @@ loader.s32,.loader.s32{
 	background:#4e89c5;
 	color:#fff;
 }*/
+#lstStoreOption .contentItem:after{
+	visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+}
 #lstStoreOption .titleDivider,
 #cartList .titleDivider{ text-align:right; }
-#lstStoreOption .contentItem{ height:90px; }
+#lstStoreOption .contentItem{ min-height:90px; }
 #cartList .contentItem{ height:110px; }
 #lstStoreOption .contentItem .itemPic,
 #cartList .contentItem .itemPic{
@@ -1242,6 +1250,9 @@ loader.s32,.loader.s32{
 	font-weight:bold;
 	font-size:12px;
 	margin:2px 0;
+}
+#lstStoreOption .buttons{
+	float:left;
 }
 #lstStoreOption .buttons a,
 #cartList .buttons a{
